--- a/2017/Stent/code/redux/.babelrc
+++ b/2017/Stent/code/redux/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["react", "es2015"],
+  "presets": ["react", "es2015", "stage-3"],
   "plugins": ["transform-object-rest-spread"]
 }
