--- a/2017/Stent/code/redux/package.json
+++ b/2017/Stent/code/redux/package.json
@@ -15,14 +15,17 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^14.5.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "watchify": "^3.9.0"
   }
 }
