--- a/2017/Stent/code/stent/package.json
+++ b/2017/Stent/code/stent/package.json
@@ -23,7 +23,7 @@
     "browserify": "^14.5.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "stent": "^1.1.2",
+    "stent": "1.1.3",
     "watchify": "^3.9.0"
   }
 }
